# malus

./: .gitignore  LICENSE  README.md  dict.txt  malus.cabal  model.txt
app/: Main.hs
data/: get_datasets.sh
src/: Lib.hs  MachineLearning.hs  Preprocessing.hs  Rest.hs
test/: Spec.hs
