name:                malus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/malus#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib,
                       Rest
  build-depends:       base >= 4.7 && < 5
                     , directory >= 1.3 && < 1.4
                     , scotty >= 0.11.0 && < 0.12
                     , aeson >= 1.0.2.1 && < 1.1
                     , http-types >= 0.9.1 && < 1.0
  default-language:    Haskell2010

executable malus-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , malus
                     , directory
  default-language:    Haskell2010

test-suite malus-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , malus
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/apisarek/malus
